cards: more space for the trick to avoid overlaps

--- a/web/src/gamesShared/components/cards/Trick.module.css
+++ b/web/src/gamesShared/components/cards/Trick.module.css
@@ -1,7 +1,7 @@
 .trick {
   position: absolute;
   left: 0; right: 0;
-  top: 100px; bottom: 0;
+  top: 0; bottom: 0;
   overflow: hidden;
   z-index: 1;
 }
